# tgstars

./: Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  services.py  уеппу.html
src/: main.py
src/backend/: api.py  schema.py
src/bot/: __init__.py  config.py  handlers.py  querys.py  services.py
src/market/: README.md  index.html  market.html  sw.js
src/web/: index.html
webapp/: index.html
