[tool.poetry]
name = "stars"
version = "0.1.0"
description = "TgStar"
authors = ["JahongirHakimjonov <jahongirhakimjonov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = "3.21.0"
fastapi = "0.110.2"
uvicorn = "0.29.0"
httpx = "0.27.0"
pydantic = "2.5.3"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"